@@ -14,6 +14,8 @@ update-manager (1:0.132) UNRELEASED; urgency=low
   * DistUpgrade/DistUpgradeCache.py:
     - when showing the demoted packages, skip packages that
       are automatic installed
+    - improve performance on the removal checks by making use of
+      the auto removable information more agressively
   * DistUpgrade/DistUpgradeView.py, DistUpgrade/DistUpgradeView{Gtk,KDE}.py:
     - show only non auto-installed removals bold
 
